Fix CSS z-index

--- a/src/modules/CRUD/components/Details/styles.scss
+++ b/src/modules/CRUD/components/Details/styles.scss
@@ -227,6 +227,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 1;
   }
 
   &__list-edit-mandatory {
